# final-project-t13

./: .babelrc  2-create-artist-image-table.sql  4-create-album-image-table.sql  README.md  package-lock.json  package.json  webpack.config.js
api/: Cargo.toml
api/src/: db.rs  encoding.rs  error.rs  main.rs
api/src/filters/: albums.rs  artists.rs  mod.rs  playlists.rs  tracks.rs
api/src/handlers/: albums.rs  artists.rs  mod.rs  playlists.rs  tracks.rs
importer/: Cargo.toml
importer/ffmpeg-sys/: Cargo.toml  build.rs
importer/ffmpeg-sys/src/: bindings.rs  lib.rs
importer/src/: import.rs  main.rs  models.rs
importer/src/av/: error.rs  format.rs  metadata.rs  mod.rs  utils.rs
importer/src/metadata/providers/: mod.rs
importer/src/metadata/providers/musicbrainz/: client.rs  entities.rs  error.rs  mod.rs
importer/src/metadata/providers/spotify/: client.rs
importer/src/utils/: lev.rs  mod.rs
public/: index.html
sql/: 1-create-artist-table.sql  2-create-album-table.sql  3-create-album-table.sql  3-create-track-table.sql  4-create-playlist-table.sql  5-create-playlist-track-table.sql  5-create-track-table.sql  6-create-sync-event-table.sql  7-create-playlist-track-table.sql
src/: app.js  index.js  store.js  styles.css  utils.js
src/actions/: albums.js  artists.js  music-player.js  playlists.js  tracks.js
src/components/add-to-playlist-modal/: index.js  styles.css
src/pages/: not-found.js
src/reducers/: albums.js  artists.js  by-id.js  music-player.js  root.js
src/routes/: album.js  albums.js  artist.js  artists.js  home.js  playlist.js
(+46 files in other folders)
