[package]
name = "api"
version = "0.1.0"
authors = ["Jason Chen <jason@jcndrop.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.5"
percent-encoding = "2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5"
warp = "0.2"
